[metadata]
name = sito_io
author = Michael McDermott
author-email = michaelmcdermott11@gmail.com
summary = Standard Interfaces for Object Transformation - File I/O Structures
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/xkortex/sito-io
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    sito_io


